<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_navy_blue">

    <!-- App Title -->
    <!-- Username Field -->

    <TextView
        android:id="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/qa_app_tester"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:autofillHints="username"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/username"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#494646"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:autofillHints="password"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColorHint="#494646"
        android:textColor="#000000"
        app:layout_constraintTop_toBottomOf="@id/appTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- Login Button -->
    <Button
        android:id="@+id/loginButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/login"
        android:textColor="#000000" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:text="@string/register"
        android:textColor="#000000" />

</LinearLayout>
