<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Login activity resources -->
    <string name="login" translatable="false">Login</string>
    <string name="password" translatable="false">Password</string>
    <string name="username" translatable="false">Username</string>
</resources>